--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@ember/jquery": "^2.0.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.6.0",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "broccoli-merge-trees": "^4.2.0",
+    "broccoli-static-compiler": "^0.2.2",
     "ember-auto-import": "^2.2.4",
     "ember-cli": "~4.1.0",
     "ember-cli-app-version": "^5.0.0",
@@ -59,6 +62,7 @@
     "prettier": "^2.5.1",
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
+    "semantic-ui-ember": "^3.0.5",
     "webpack": "^5.65.0"
   },
   "engines": {
@@ -66,5 +70,8 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "@ember-data/model": "^4.2.0"
   }
 }
